# CTSE-Assignment-02

./: .gitignore  README.md  check_services.py  pyproject.toml  requirements.txt  run_pipeline.py  structure.txt
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
config/: .env.example
docs/briefing/: README.md
docs/correlation/: README.md
docs/ingest/: README.md
docs/rca/: README.md
src/mas/: __init__.py
src/mas/agents/briefing/: __init__.py  __main__.py  agent.py  ollama.py  pipeline.py  report.py
src/mas/agents/correlation/: __init__.py  __main__.py  agent.py  pipeline.py  report.py
src/mas/agents/ingest/: __init__.py  __main__.py  agent.py  ollama.py  pipeline.py  report.py
src/mas/agents/rca/: __init__.py  __main__.py  agent.py  ollama.py  pipeline.py  report.py
src/mas/core/: __init__.py  observability.py  orchestrator.py  state.py
src/mas/evaluation/: __init__.py
src/mas/evaluation/harness/: __init__.py  __main__.py  llm_judge.py  run_all.py
src/mas/tools/briefing/: __init__.py  format_briefing.py  signals.py
src/mas/tools/correlation/: __init__.py  query_incidents.py  signatures.py
src/mas/tools/ingest/: __init__.py  discover_logs.py  normalize.py  paths.py  read_logs.py
src/mas/tools/rca/: __init__.py  evidence_bundle.py  signals.py
tests/evaluation/: conftest.py  test_harness.py  test_llm_judge_optional.py  test_orchestrator_ingest_handoff.py  test_security_evaluation.py  test_unified_harness.py
tests/evaluation/cases/briefing/: test_briefing_agent.py  test_briefing_pipeline.py  (+2 more)
(+20 files in other folders)
