[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mas-ctse"
version = "0.1.0"
description = "CTSE Assignment 2 – local multi-agent system"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "hypothesis>=6.0.0",
    "langgraph>=0.2.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
